# hayagriva

./: .gitignore  Cargo.toml
.github/workflows/: build-ffi.yml  release-cli.yml
archive/: generate_zlib.py
archive/locales_zlib/: af-ZA.cbor.zlib  ar.cbor.zlib  bal-PK.cbor.zlib  bg-BG.cbor.zlib  brh-PK.cbor.zlib  ca-AD.cbor.zlib  cs-CZ.cbor.zlib  cy-GB.cbor.zlib  da-DK.cbor.zlib  de-AT.cbor.zlib  de-CH.cbor.zlib  de-DE.cbor.zlib  el-GR.cbor.zlib  en-GB.cbor.zlib  en-US.cbor.zlib  es-CL.cbor.zlib  es-ES.cbor.zlib  es-MX.cbor.zlib  et-EE.cbor.zlib  eu.cbor.zlib  fa-IR.cbor.zlib  fi-FI.cbor.zlib  fr-CA.cbor.zlib  fr-FR.cbor.zlib  gl-ES.cbor.zlib  he-IL.cbor.zlib  hi-IN.cbor.zlib  hr-HR.cbor.zlib  hu-HU.cbor.zlib  hy-AM.cbor.zlib  id-ID.cbor.zlib  is-IS.cbor.zlib  it-IT.cbor.zlib  ja-JP.cbor.zlib  km-KH.cbor.zlib  ko-KR.cbor.zlib  la.cbor.zlib  lij-IT.cbor.zlib  lt-LT.cbor.zlib  lv-LV.cbor.zlib  (+24 more)
archive/styles_zlib/: alphanumeric.cbor.zlib  american-anthropological-association.cbor.zlib  american-chemical-society.cbor.zlib  american-geophysical-union.cbor.zlib  american-institute-of-aeronautics-and-astronautics.cbor.zlib  american-institute-of-physics.cbor.zlib  american-mathematical-society-label.cbor.zlib  american-mathematical-society-numeric.cbor.zlib  american-medical-association.cbor.zlib  american-meteorological-society.cbor.zlib  american-physics-society.cbor.zlib  american-physiological-society.cbor.zlib  american-political-science-association.cbor.zlib  american-society-for-microbiology.cbor.zlib  american-society-of-civil-engineers.cbor.zlib  american-society-of-mechanical-engineers.cbor.zlib  american-sociological-association.cbor.zlib  angewandte-chemie.cbor.zlib  annual-reviews-author-date.cbor.zlib  annual-reviews.cbor.zlib  apa.cbor.zlib  associacao-brasileira-de-normas-tecnicas.cbor.zlib  association-for-computing-machinery.cbor.zlib  biomed-central.cbor.zlib  bmj.cbor.zlib  bristol-university-press.cbor.zlib  cell.cbor.zlib  chicago-author-date-17th-edition.cbor.zlib  chicago-author-date.cbor.zlib  chicago-fullnote-bibliography.cbor.zlib  chicago-note-bibliography.cbor.zlib  chicago-notes-bibliography-subsequent-author-title-17th-edition.cbor.zlib  chicago-notes-bibliography.cbor.zlib  chicago-shortened-notes-bibliography.cbor.zlib  china-national-standard-gb-t-7714-2015-author-date.cbor.zlib  china-national-standard-gb-t-7714-2015-note.cbor.zlib  china-national-standard-gb-t-7714-2015-numeric.cbor.zlib  copernicus-publications.cbor.zlib  (+55 more)
docs/: ffi-design.md
examples/cpp/: CMakeLists.txt  main.cpp
hayagriva-ffi/: Cargo.toml  build-ffi.bat  build-ffi.sh
hayagriva-ffi/include/: hayagriva.h
hayagriva-ffi/src/: ctx.rs  json.rs  lib.rs
tests/: archiver.rs
(+4 files in other folders)
